# py-core-to-cloud

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/py_core_to_cloud/: __init__.py  __main__.py
tests/: test_main.py
