[project]
name = "py-core-to-cloud"
version = "0.1.0"
description = "Mini Slack clone to learn Python end-to-end"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sagar Dwivedi", email = "sagar.dw20@gmail.com"}]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy", "pre-commit"]


[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
py-core-to-cloud = "py_core_to_cloud.__main__:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "ANN", "S", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
